DevTools: fix clearing of geolocation override

The EmulationAgent can clear the existing geolocation override.
In the original implementation, it resets the geoposition_override_
https://codereview.chromium.org/603323004

During a later refactoring, it looks like this line was dropped
which led to newly created impls that reused the old override even
after it should have been cleared.
https://codereview.chromium.org/628773003

Bug: 639344
Change-Id: I0a76aa60b70265fc604fc87d68566ff815878433
Reviewed-on: https://chromium-review.googlesource.com/823276
Commit-Queue: Erik Luo <luoe@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524482}
Former-commit-id: 7eebce267e14f4dafa8eb0609ad7c89ad713345e